[project]
name = "rl-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium[classic-control]>=1.2.2",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "moviepy>=2.2.1",
    "tensordict>=0.10.0",
    "torchrl>=0.10.1",
]
